# metamcp

./: Dockerfile  docker-compose.yml  docker-entrypoint.sh
servers/gemini_memory/: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
servers/gemini_memory/docs/: architecture.md  compatibility.md  docker_usage.md  gemini_integration.md  user_guide.md
servers/gemini_memory/examples/: gemini_desktop_config.md  retrieve_memory_example.py  store_memory_example.py
servers/gemini_memory/tests/: __init__.py  test_memory_mcp.py
servers/image-generator-mcp-server-master/: README.md  package-lock.json  package.json
servers/image-generator-mcp-server-master/src/: file-saver.ts  image-generator.ts  index.ts  types.ts
servers/mcp-playwright-extra/: README.md  claude-config-example.json  index.js  package-lock.json  package.json  start-server.sh  test-browser.js  test-full.js  test-mcp.js
servers/mcp_servers/: docker_server.py  filesystem_server.py  git_server.py  monitoring_server.py  playwright_server.py  python_execution_server.py  sqlite_server.py  terminal_execution_server.py  terminal_server.py  web_scraping_server.py
servers/puppeteer_agent/: agent_browser_controller.js  package-lock.json  package.json  run.sh
